--- a/index.css
+++ b/index.css
@@ -2585,9 +2585,9 @@ body {
 #container-job .inner .list-wrapper ul li .li_top {
   width: 330px;
   height: 25px;
-  border: 1px solid #EAEEED;
 }
 #container-job .inner .list-wrapper ul li .li_top .li_position {
+  display: inline-block;
   color: #333;
   max-width: 107px;
   font-size: 16px;
@@ -2597,24 +2597,95 @@ body {
   text-decoration: none;
 }
 #container-job .inner .list-wrapper ul li .li_top .create-time {
+  display: inline-block;
   color: #999;
   max-width: 107px;
   font-size: 14px;
+  position: relative;
+  bottom: 3px;
+}
+#container-job .inner .list-wrapper ul li .li_top .chat_me {
+  display: inline-block;
+  position: relative;
+  width: 16px;
+  height: 16px;
+  background: url(https://www.lgstatic.com/lg-www-fed/index/modules/job_list/img/icon_chat2_d162651.png) no-repeat 0 0;
+  cursor: pointer;
+}
+#container-job .inner .list-wrapper ul li .li_top .salary {
+  display: inline-block;
+  position: relative;
+  font-size: 16px;
+  color: #fa6041;
+  bottom: 2px;
+  left: 14px;
 }
 #container-job .inner .list-wrapper ul li .li_wordcut {
   width: 330px;
   height: 25px;
-  border: 1px solid #EAEEED;
+  line-height: 30px;
+  color: #777;
+  font-size: 14px;
 }
 #container-job .inner .list-wrapper ul li .li_labels {
   width: 330px;
   height: 43px;
-  border: 1px solid #EAEEED;
+}
+#container-job .inner .list-wrapper ul li .li_labels span {
+  display: inline-block;
+  width: 61px;
+  height: 26px;
+  padding: 0 5px;
+  font-size: 12px;
+  line-height: 26px;
+  color: #999;
+  border: 1px solid #F0F0F0;
+  border-radius: 3px;
+  text-align: center;
+  margin: 8px 2px;
 }
 #container-job .inner .list-wrapper ul li .li_bottom {
   width: 330px;
   height: 70px;
-  border: 1px solid #EAEEED;
+  border-top: 1px dashed #EAEEED;
+  position: relative;
+  top: 15px;
+}
+#container-job .inner .list-wrapper ul li .li_bottom .logo {
+  width: 40px;
+  height: 40px;
+  background: url(https://www.lgstatic.com/thumbnail_100x100/i/image/M00/5A/ED/Cgp3O1ffoHyAUyBeAAAR8ki8dmw574.jpg);
+  background-size: 40px 40px;
+  display: inline-block;
+  position: relative;
+  top: 16px;
+}
+#container-job .inner .list-wrapper ul li .li_bottom .bottom-right {
+  display: inline-block;
+  width: 260px;
+  height: 40px;
+  position: relative;
+  top: 11px;
+  padding: 0 8px;
+}
+#container-job .inner .list-wrapper ul li .li_bottom .bottom-right a {
+  display: inline-block;
+  width: 279px;
+  height: 19px;
+  /* border: 1px solid #000; */
+  position: relative;
+  color: #555;
+  font-size: 14px;
+  text-decoration: none;
+}
+#container-job .inner .list-wrapper ul li .li_bottom .bottom-right span {
+  display: inline-block;
+  width: 279px;
+  height: 19px;
+  /* border: 1px solid #000; */
+  position: relative;
+  color: #999;
+  font-size: 14px;
 }
 #container-companys {
   width: 100%;
