--- a/index.css
+++ b/index.css
@@ -2495,6 +2495,7 @@ body {
 }
 #container-job {
   width: 100%;
+  height: 955px;
   background: #fff;
   display: flex;
   justify-content: center;
@@ -2581,6 +2582,9 @@ body {
   display: inline-block;
   padding: 20px 20px;
   margin: 8px 8px;
+}
+#container-job .inner .list-wrapper ul li:hover {
+  box-shadow: 0 0 10px rgba(56,81,76,0.12);
 }
 #container-job .inner .list-wrapper ul li .li_top {
   width: 330px;
@@ -2672,7 +2676,6 @@ body {
   display: inline-block;
   width: 279px;
   height: 19px;
-  /* border: 1px solid #000; */
   position: relative;
   color: #555;
   font-size: 14px;
@@ -2682,10 +2685,28 @@ body {
   display: inline-block;
   width: 279px;
   height: 19px;
-  /* border: 1px solid #000; */
   position: relative;
   color: #999;
   font-size: 14px;
+}
+#container-job .inner .list-wrapper .list_more {
+  display: block;
+  width: 370px;
+  height: 42px;
+  line-height: 42px;
+  background: #FFF;
+  border: 1px solid #00B38A;
+  font-size: 16px;
+  color: #00b38a;
+  text-align: center;
+  text-decoration: none;
+  justify-content: center;
+  position: relative;
+  left: 442px;
+}
+#container-job .inner .list-wrapper .list_more:hover {
+  color: #fff;
+  background: #00B38A;
 }
 #container-companys {
   width: 100%;
@@ -2699,4 +2720,137 @@ body {
   height: 100%;
   position: relative;
   top: 30px;
+}
+#container-job .inner .list-wrapper .list_ul_company_01 li {
+  list-style: none;
+  width: 226px;
+  height: 212px;
+  border: 1px solid #EAEEED;
+  display: inline-block;
+  padding: 20px 20px;
+  margin: 7px 5px;
+}
+#container-job .inner .tab .module-tabs {
+  display: inline-block;
+  width: 138px;
+  padding: 14px 17px;
+  font-size: 16px;
+  position: relative;
+  cursor: pointer;
+}
+#container-job .inner .tab .module-tabs::before {
+  content: "";
+  background: #000;
+  display: block;
+  width: 128px;
+  height: 2px;
+  position: relative;
+  top: 34px;
+}
+#container-job .inner .tab .module-tabs::after {
+  content: "";
+  background: #D8D8D8;
+  display: block;
+  width: 1200px;
+  height: 1px;
+  position: relative;
+  top: 13px;
+}
+#container-job .inner .hot_company_tips::before {
+  content: "?";
+  width: 18px;
+  height: 18px;
+  color: #fff;
+  background-color: #e6e6e6;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 18px;
+  margin-right: 10px;
+  display: inline-block;
+}
+#container-job .inner .hot_company_tips {
+  width: 267px;
+  height: 50px;
+  position: relative;
+  font-size: 14px;
+  color: #999;
+  top: 34px;
+  left: 19px;
+}
+#container-job .inner .hot_company_tips_iknow {
+  display: inline-block;
+  width: 56px;
+  height: 50px;
+  position: relative;
+  font-size: 14px;
+  color: #00b38a;
+  top: 34px;
+  left: 50px;
+  cursor: pointer;
+}
+#container-job .inner .list-wrapper ul li .li_company-logo {
+  background: url(https://www.lgstatic.com/thumbnail_160x160/i/image/M00/14/45/CgqKkVbpCXaALwOxAAAKxYyWtuM099.jpg);
+  width: 80px;
+  height: 80px;
+  background-size: 80px 80px;
+  position: relative;
+  left: 76px;
+}
+#container-job .inner .list-wrapper ul li .li_company-name {
+  height: 22px;
+  margin-top: 13px;
+  font-size: 16px;
+  color: #333;
+  text-align: center;
+}
+#container-job .inner .list-wrapper ul li .li_company-stage {
+  height: 22px;
+  margin-top: 3px;
+  margin-bottom: 0;
+  color: #999;
+  font-size: 14px;
+  text-align: center;
+}
+#container-job .inner .list-wrapper ul li .li_company-advantage {
+  margin-top: 5px;
+  margin-bottom: 0;
+  color: #555;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  font-size: 14px;
+}
+#container-job .inner .list-wrapper ul li .li_company_bottom {
+  width: 226px;
+  height: 53px;
+  border-top: 1px dashed #EAEEED;
+  position: relative;
+  top: 10px;
+}
+#container-job .inner .list-wrapper ul li .li_company_bottom a {
+  display: inline-block;
+  width: 70px;
+  height: 30px;
+  text-decoration: none;
+  position: relative;
+  margin: 10px 0 0 0;
+}
+#container-job .inner .list-wrapper ul li .li_company_bottom a .item-top {
+  display: block;
+  color: #00b38a;
+  font-size: 14px;
+  text-align: center;
+  position: relative;
+  bottom: 16px;
+}
+#container-job .inner .list-wrapper ul li .li_company_bottom a .item-bottom {
+  display: block;
+  font-size: 12px;
+  color: #999;
+  text-align: center;
+  position: relative;
+  bottom: 32px;
+}
+#container-job .inner .list-wrapper ul li .li_company_bottom .bottom-item_02, .bottom-item_03 {
+  border-left: 1px dashed #EAEEED;
 }
