--- a/footer.css
+++ b/footer.css
@@ -43,6 +43,16 @@
   display: flex;
   font-size: 14px;
 }
+.footer_wechat {
+  cursor: pointer;
+}
+.footer_webo {
+  cursor: pointer;
+  width: 77px;
+  height: 21.6px;
+  position: relative;
+  left: 27px;
+}
 .footer_wechat_icon {
   display: inline-block;
   height: 16px;
@@ -51,6 +61,7 @@
   padding: 0px 0 -3px 0;
   position: relative;
   top: 2px;
+  cursor: pointer;
 }
 .footer_webo_icon {
   display: inline-block;
@@ -60,7 +71,7 @@
   padding: 0px 0 -3px 0;
   position: relative;
   top: 2px;
-  margin: 0 0 0 29px;
+  cursor: pointer;
 }
 .footer_module_right {
   width: 757px;
@@ -153,4 +164,30 @@
 }
 #backtop:hover {
   background-position: right top;
+}
+#footer .inner_wrapper a:hover {
+  color: #00B38A;
+}
+.footer_app:hover {
+  background: #00B38A;
+  color: #fff;
+}
+.footer_mina:hover {
+  background: #00B38A;
+  color: #fff;
+}
+.footer_mina img {
+  display: none;
+}
+.footer_mina:hover img {
+  position: absolute;
+  bottom: -99px;
+  width: 140px;
+  height: 140px;
+  right: -150px;
+  background-color: #fff;
+  -moz-box-shadow: 0 2px 8px 0 rgba(0,0,0,.1);
+  box-shadow: 0 2px 8px 0 rgba(0,0,0,.1);
+  border-radius: 3px;
+  display: inline-block;
 }
