--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body {
 #header {
   width: 100%;
   height: 49px;
-  background: #202329;
+  background: #32373e;
   display: flex;
   justify-content: center;
   }
@@ -17,8 +17,10 @@ body {
   flex: 1.8;
   width: 105px;
   height: 30px;
-  background: url(https://static.zhipin.com/zhipin-geek/v313/web/geek/images/logo-2x.png) 3px 7px no-repeat;
-  background-size: 105px 19px;
+  background-image: url(https://www.lgstatic.com/lg-www-fed/common/widgets/header_c/modules/topbar/img/sprite_361857f.png);
+  background-repeat: no-repeat;
+  background-position: -10px -1px;
+  background-size: 64px 128px;
   position: relative;
   top: 5px; 
   }
@@ -41,7 +43,7 @@ body {
   width: 28px;
   height: 14px;
   font-size: 14px;
-  color: #00d7c6;
+  color: #00b38a;
   position: relative;
   top:13px;
 }
@@ -67,7 +69,7 @@ body {
   width: 48px;
   height: 48.8px;
   font-size: 14px;
-  color: #00d7c6;
+  color: #00b38a;
   font-size: 14px;
   text-align: center;
   line-height: 48.8px;
@@ -84,7 +86,7 @@ body {
   line-height: 48.8px;
 }
 .header-job:hover {
-  color: #00d7c6;
+  color: #00b38a;
 }
 .nav-school-new {
   flex: 1;
@@ -97,7 +99,7 @@ body {
   line-height: 48.8px;
 }
 .nav-school-new:hover {
-  color: #00d7c6;
+  color: #00b38a;
 }
 .header_brand {
   flex: 1;
@@ -110,7 +112,7 @@ body {
   line-height: 48.8px;
 }
 .header_brand:hover {
-  color: #00d7c6;
+  color: #00b38a;
 }
 .header-app {
   flex: 1;
@@ -123,7 +125,7 @@ body {
   line-height: 48.8px;
 }
 .header-app:hover {
-  color: #00d7c6;
+  color: #00b38a;
 }
 .header-article {
   flex: 1;
@@ -136,7 +138,7 @@ body {
   line-height: 48.8px;
 }
 .header-article:hover {
-  color: #00d7c6;
+  color: #00b38a;
 }
 .btns {
   flex: 10;
@@ -159,7 +161,7 @@ body {
   margin: 0 0 0 300px;
 }
 .nlp_resume_upload:hover {
-  color: #00d7c6;
+  color: #00b38a;
 }
 .header-geek {
   flex: 2;
@@ -172,7 +174,7 @@ body {
   line-height: 48.8px;
 }
 .header-geek:hover {
-  color: #00d7c6;
+  color: #00b38a;
 }
 .header-boss {
   flex: 1.5;
@@ -185,7 +187,7 @@ body {
   line-height: 48.8px;
 }
 .header-boss:hover {
-  color: #00d7c6;
+  color: #00b38a;
 }
 .header-register {
   flex: 0.7;
@@ -197,7 +199,7 @@ body {
   font-size: 14px;
   text-align: center;
   line-height: 15px;
-  border: 1px solid#00d7c6;
+  border: 1px solid#00b38a;
   border-radius: 20px;
   height: 26px;
   align-items: center;
@@ -207,7 +209,7 @@ body {
   left: 15px;
 }
 .header-register:hover {
-  color: #00d7c6;
+  color: #00b38a
 }
 .header-login {
     flex: 0.7;
@@ -219,7 +221,7 @@ body {
   font-size: 14px;
   text-align: center;
   line-height: 15px;
-  border: 1px solid#00d7c6;
+  border: 1px solid#00b38a;
   border-radius: 20px;
   height: 26px;
   align-items: center;
@@ -229,7 +231,7 @@ body {
   left: 30px;
 }
 .header-login:hover {
-  color: #00d7c6;
+  color: #00b38a;
 }
 .un-login-banner {
   width: 100%;
