--- a/lagou-web-header.css
+++ b/lagou-web-header.css
@@ -44,11 +44,13 @@ body {
   line-height: 40px;
   padding-right: 12px;
   margin: 0;
+  display: none;
 }
 .suggestCity .switch_cities {
   font-size: 12px;
   color: #afb5c0;
   line-height: 40px;
+  display: none;
 }
 .lg_tbar_tabs li {
   display: inline-block;
@@ -67,7 +69,6 @@ body {
   float: right;
   height: 40px;
   position: relative;
-  bottom: 41px;
   left: 14px;
 }
 .lg_tbar_r .passport {
