--- a/lagou-web-header.css
+++ b/lagou-web-header.css
@@ -233,12 +233,13 @@ body {
   margin: 45px 0 0 0;
 }
 .register-login-form .input-wrapper-tel .area-code-content {
-  width: 66px;
+  width: 61px;
   height: 35px;
   background: #fff;
   font-size: 14px;
   font-family: "Hiragino Sans GB","Microsoft Yahei",SimSun,Arial,"Helvetica Neue",Helvetica;
-  text-align: center;
+  text-align: 14;
+  padding: 0 0px 0 9px;
   line-height: 35px;
   color: #999;
 }
@@ -246,9 +247,8 @@ body {
   width: 9px;
   height: 5px;
   position: absolute;
-  margin: -17.5px 0 0 66px;
+  margin: -19px 0 0 53px;
   background: #fff url(https://www.lgstatic.com/lg-www-fed/common/widgets/un_login_banner/img/trangle_1091ce9.png) no-repeat;
-  color: #999;
   display: inline-block;
 }
 .register-login-form .input-wrapper-tel .tell-input {
@@ -258,9 +258,7 @@ body {
   background: #fff;
   font-size: 14px;
   font-family: "Hiragino Sans GB","Microsoft Yahei",SimSun,Arial,"Helvetica Neue",Helvetica;
-  text-align: center;
   line-height: 35px;
-  color: #000;
   border: 0;
   margin: -35px 0 0 66px;
   outline: none;
@@ -318,23 +316,42 @@ body {
 }
 .search-wrapper {
   width: 100%;
-  height: 120px;
+  height: 180px;
   background: #f2f5f4;
-  display: flex;
   justify-content: center;
   align-items: center;
+}
+.tab-wrapper {
+  display: flex;
+  width: 938px;
+  height: 46px;
+  position: relative;
+  top: 28px;
+  left: 170px;
+}
+.tab-wrapper .tab_pos {
+  width: 117px;
+  height: 30px;
+  background: #00b38a;
+  color: #fff;
+  display: block;
+  position: relative;
+  text-align: center;
+  line-height: 30px;
+  font-size: 16px;
 }
 .search_box {
   display: flex;
   width: 938px;
   height: 46px;
   position: relative;
-  right: 136px;
+  top: 28px;
+  left: 170px;
 }
 .search_input {
   width: 795px;
   height: 48px;
-  margin: -1px 0 0 -1;
+  margin: 0px 0 0 0px;
   border: 0;
   font-size: 16px;
   padding: 0 0 0 16px;
@@ -343,17 +360,48 @@ body {
 }
 .search_button {
   width: 143px;
-  height: 47px;
+  height: 48px;
   background: #00b38a;
   color: #fff;
   font-size: 18px;
   text-align: center;
   line-height: 46px;
-  margin: -1px -1px 0 0;
-  cursor: pointer
+  margin: 0px 0px 0px 0;
+  padding: 0px 0;
+  cursor: pointer;
 }
 .search_button:hover {
   background: #00a57f;
+}
+.r_search_tit {
+  width: 932px;
+  height: 31px;
+  position: relative;
+  top: 39px;
+  left: 170px;
+}
+.r_search_tit span {
+  display: inline-block;
+  color: #777;
+  font-size: 14px;
+  height: 22px;
+  line-height: 22px;
+}
+.r_search_tit ul {
+  display: inline-block;
+  width: 850px;
+  height: 22px;
+  line-height: 22px;
+  list-style: none;
+  position: relative;
+  bottom: 50px;
+  left: 33px;
+}
+.r_search_tit ul li {
+  color: #999;
+  font-size: 14px;
+  display: inline-block;
+  padding: 7px;
 }
 #container {
   width: 100%;
